assets/css/style.css
@import 'https://fonts.googleapis.com/css?family=Lora:400,400i,700|Raleway:300,600,700,900';
@import 'https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css';
/*Global Settings*/

body{
	font-family: 'Lora', serif;
	box-sizing: border-box;
	
}
h1, h2, h3, h4, h5, h6{
	font-family: 'Raleway', sans-serif;
	text-transform: uppercase;
	font-weight: 900;
	color: black;
	margin-bottom: 35px;
	margin-top: 0;
}
h1{
	font-size: 45px;
}
h2{
	font-size: 32px;
}
h3{
	font-size: 21px;
}
p{
	font-size: 16px;
	font-style: italic;
	color: black;
}
a{
	transition: all 0.3s ease-in-out;
}
section{
	text-align: center;
	box-sizing: border-box;
}
.blockquote p{
	font-size: 32px;
	line-height: 45px;
	padding-left: 30px;
	border-left: 3px solid #424242;
	color: black;
}

.title{
	position: relative;
	margin-bottom: 100px;
}
.title:after{
	content: '';
	height: 5px;
	width: 40px;
	background-color: #62aa94;
	position: absolute;
	top: 81px;
	left: calc(50% - 20px);
}

/*Bootstrap*/
.navbar-ubutia{
	background-image: none;
	background-color: #3b3939;
	margin-bottom: 0;
	border-radius: 0;
	color: black;
	border-color: transparent;
	transition: all 0.3s ease-in-out;
}
.menu-item .dropdown-menu {
    left: 50%;
	background-color: transparent !important;
    transform: translateX(-50%);
    text-align: center;
	color: black;
}
.menu-item .dropdown-menu:hover {
    
	color: black !important;
}
.form-control option{
	color: black;
}
.form-control{
	border-radius: 0;
	padding: 25px;
    font-size: 18px;
    font-style: italic;
    background-color: transparent;
    color: #424242;
    margin-bottom: 30px;
	border-color: #51c2b9;
}
.form-control:focus{
	border-color: #51c2b9;
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(81, 194, 185, 0.6);
}
.form-control::-webkit-input-placeholder {
    color: #fff;
}
.form-control:-moz-placeholder { /* Firefox 18- */
    color: #fff;  
}
.form-control::-moz-placeholder {  /* Firefox 19+ */
    color: #fff;  
}
.form-control:-ms-input-placeholder {  
    color: #fff;  
}

.element .form-control::-webkit-input-placeholder {
    color: #424242;
}
.element .form-control:-moz-placeholder { /* Firefox 18- */
    color: #424242;  
}
.element .form-control::-moz-placeholder {  /* Firefox 19+ */
    color: #424242;  
}
.element .form-control:-ms-input-placeholder {  
    color: #424242;  
}




/*Helper class*/
.mt80{
	margin-top: 80px;
}
.mb80{
	margin-bottom: 80px;
}
.mr60{
	margin-right: 60px;
}
.bg-img{
	background-size: cover;
	background-repeat: no-repeat;
	position: relative;
}
.bg-img div{
	z-index: 1;
	position: relative;
}
.bg-img:after{
	position: absolute;
	content: '';
	height: 100%;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	left: 0;
	top: 0;
}
.section{
	padding: 100px 0;
	box-sizing: border-box;
	display: flex; /* Enable flexbox */
	flex-wrap: nowrap; /* Prevent wrapping */
	justify-content: space-between; /* Add spacing between cards */
	align-items: stretch; /* Align cards to stretch equally */
}
.ubutia-icon{
	background:transparent url(../images/logo.png) no-repeat;
    width: 187px;
    height: 68px;
	display:block;
}
.graphic-design{
	background:transparent url(../images/graphic-design.png) no-repeat;
    width: 120px;
    height: 120px;
	display:block;
}
.webdevelopment{
	background:transparent url(../images/webdevelopment.png) no-repeat;
    width: 120px;
    height: 120px;
	display:block;
}
.printing{
	background:transparent url(../images/printing.png) no-repeat;
    width: 120px;
    height: 120px;
	display:block;
}
.play-icon{
	background:transparent url(../images/video-play-icon.png) no-repeat;
    width: 70px;
    height: 69px;
	display:block;
}
/*ubutia Card*/
.ubutia-card{
	text-align: center;
	margin-bottom: 45px;
	flex: 1;
	margin: 0 10px; 
	/* background-color: transparent!important; */
}
.ubutia-card .ubutia-card-header{
	margin-bottom: 45px;
}
.ubutia-card .ubutia-card-header .card-icon{
	border-radius: 100%;
	display: inline-block;
	height: 120px;
	width: 120px;
	line-height: 120px;
	position: relative;
}


/*Button*/
.ubutia-btn{
	border-color: #51c2b9;
	font-style: italic;
	color: #51c2b9;
	border-radius: 0;
	letter-spacing: 3px;
	padding: 15px 80px;
	margin-bottom: 30px;
	background-color: transparent;
	transition: all 0.3s ease-in-out;
}
.ubutia-btn:hover{
	background-color: #51c2b9;
	color: #fff;
}
.solid{
	background-color: #51c2b9;
	color: #fff;
}
.solid:hover{
	background-color: #fff;
	color: #51c2b9;
}
.small-btn{
	padding: 10px 130px;
}

/*Element page*/
.element .navigation-bar{
	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}
.element .navigation-bar a{
	color: #424242;
}
.element .dark-bar{
	background-color: #fff;
}
.element .menu:after{
	color: #424242;
}
.element .title:after{
	left: 0;
	top: 60px;
}
.headings p{
	margin-bottom: 80px;
}
/* Ensure workstation section and carousel don't overflow */
#workstation {
    overflow: hidden; /* Prevent horizontal overflow */
}

#workstation-slider.owl-carousel {
    width: 100%;
    max-width: 100%;
    overflow: hidden; /* Contain carousel items */
}

#workstation-slider .item {
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
}

#workstation-slider .ubutia-card {
    margin: 0; /* Remove margins to prevent overflow */
    width: 100%;
    max-width: 100%;
}

#workstation-slider .ubutia-card-header img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0 auto; /* Center images */
}

/* Override section styles for workstation */
#workstation.section {
    padding: 50px 0; /* Reduce padding for mobile */
}
/* ... */

